## Tools

add_executable(wadinfo wadinfo.c info.h info.c)
add_executable(tmdinfo tmdinfo.c info.h info.c)
add_executable(certinfo certinfo.c info.h info.c)
add_executable(ticketinfo ticketinfo.c info.h info.c)
add_executable(wadextract wadextract.c)
add_executable(wadverify wadverify.c)
add_executable(wadglue wadglue.c)

if (BUILD_STATIC)
  set(LIBWAD_TOOLS_LIBRARY libwadstatic)
else()
  set(LIBWAD_TOOLS_LIBRARY libwad)
endif()

target_link_libraries(wadinfo ${LIBWAD_TOOLS_LIBRARY})
target_link_libraries(tmdinfo ${LIBWAD_TOOLS_LIBRARY})
target_link_libraries(certinfo ${LIBWAD_TOOLS_LIBRARY})
target_link_libraries(ticketinfo ${LIBWAD_TOOLS_LIBRARY})
target_link_libraries(wadextract ${LIBWAD_TOOLS_LIBRARY})
target_link_libraries(wadverify ${LIBWAD_TOOLS_LIBRARY})
target_link_libraries(wadglue ${LIBWAD_TOOLS_LIBRARY})

if (ENABLE_INSTALL)
  install(TARGETS wadinfo DESTINATION bin)
  install(TARGETS tmdinfo DESTINATION bin)
  install(TARGETS certinfo DESTINATION bin)
  install(TARGETS ticketinfo DESTINATION bin)
  install(TARGETS wadextract DESTINATION bin)
  install(TARGETS wadverify DESTINATION bin)
  install(TARGETS wadglue DESTINATION bin)
endif()

# optparse
target_include_directories(wadinfo PRIVATE ${CMAKE_SOURCE_DIR}/externals/optparse)
target_include_directories(tmdinfo PRIVATE ${CMAKE_SOURCE_DIR}/externals/optparse)
target_include_directories(certinfo PRIVATE ${CMAKE_SOURCE_DIR}/externals/optparse)
target_include_directories(ticketinfo PRIVATE ${CMAKE_SOURCE_DIR}/externals/optparse)
target_include_directories(wadextract PRIVATE ${CMAKE_SOURCE_DIR}/externals/optparse)
target_include_directories(wadverify PRIVATE ${CMAKE_SOURCE_DIR}/externals/optparse)
target_include_directories(wadglue PRIVATE ${CMAKE_SOURCE_DIR}/externals/optparse)
